tests/examples/bad/bad105.jl

int main()
{
   void a[34];
   return a[0];
}